# CCNY-SG-Load

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  keywords.txt
CCNY_Smart_Grid_Load/: CCNY_Smart_Grid_Load.ino  CMakeLists.txt
CCNY_Smart_Grid_Load/include/: ArduinoInterface.h  BernoulliRNG.h  CCNY_Smart_Grid_Load.h  CCNY_Smart_Grid_Load_files.h  Collect.h  Collector.h  DigitalIO.h  Display.h  DisplayMessages.h  Encode.h  Encoder.h  HardwareArduino.h  HardwareDisplay.h  HardwareIO.h  HardwareKeypad.h  HardwareRNG.h  HardwareSDFlash.h  HardwareTextFile.h  HardwareTimer.h  HardwareXBee.h  InputSequence.h  Keypad.h  KeypadCol.h  LoadProfile.h  Monitor.h  Output.h  Parse.h  Parser.h  RelayState.h  RelayStateGenerator.h  SDCard.h  SDFlash.h  Scan.h  SerialCol.h  ShiftRegister.h  TextFile.h  Timer.h  XBee.h  dspaceCol.h
CCNY_Smart_Grid_Load/include/Display/: Duration.h  HardwareLCD.h  LCD.h  Message.h  MessagesList.h  Size.h  StatusMsgSequences.h
CCNY_Smart_Grid_Load/src/: CollectKeypadSequence.cpp  CollectPCSequence.cpp  CollectdSPACESequence.cpp  Collector.cpp  Display.cpp  Encode.cpp  Encoder.cpp  HardwareIO.cpp  HardwareKeypad.cpp  HardwareRNG.cpp  HardwareSDFlash.cpp  HardwareTextFile.cpp  HardwareTimer.cpp  InputSequence.cpp  Keypad.cpp  KeypadCol.cpp  LoadProfile.cpp  Output.cpp  Parser.cpp  RelayStateGenerator.cpp  SDCard.cpp  SDprofile.cpp  Scanner.cpp  SerialCol.cpp  ShiftRegister.cpp  ValidTokens.cpp  ValidTokens.h  dsManualCol.cpp  dsProfileCol.cpp  dspaceCol.cpp
CCNY_Smart_Grid_Load/src/Display/: HardwareLCD.cpp  MessagesList.cpp  StatusMsgSequences.cpp
XCTU-files/API-frames/: 3-phase packets.xml
XCTU-files/profiles/: MGCC-AT.xml
XCTU/profiles/: load-API.xml  load-AT.xml
_4x4_keypad_control_with_Mux_shield_v2/: _4x4_keypad_control_with_Mux_shield_v2.ino
aux-sketches/I2C_scanner/: I2C_scanner.ino
aux-sketches/LCD2004_sample_code/: LCD2004_sample_code.ino
examples/LCDmessages/: LCDmessages.ino
hardware/archived/Relay control/: Components used.docx
libraries-used/Input_handler_for_load_emulator/: Input_handler_for_load_emulator.cpp  Input_handler_for_load_emulator.h
libraries-used/KeypadInput4x4/: KeypadInput4x4.h
libraries-used/Keypad_for_load_emulator/: Keypad_for_load_emulator.cpp  Keypad_for_load_emulator.h
libraries-used/LCD20x04/: LCD20x04.h
libraries-used/LCD_for_load_emulator/: LCD_for_load_emulator.cpp  LCD_for_load_emulator.h
libraries-used/MuxShield/: MuxShield.cpp
libraries-used/Parser_for_load_emulator/: Parser_for_load_emulator.cpp  Parser_for_load_emulator.h
libraries-used/RelayOutput/: RelayOutput.h
libraries-used/Shift_Reg_for_load_emulator/: Shift_Reg_for_load_emulator.cpp  Shift_Reg_for_load_emulator.h
libraries-used/XBee_for_load_emulator/: XBee_for_load_emulator.cpp
libraries-used/main_structure_for_load_emulator/: main_structure_for_load_emulator.h
libraries/LoadEmulator/: library.properties
libraries/LoadEmulator/src/: Collector.cpp  Display.cpp  Display.h  Encoder.cpp  Keypad.cpp  KeypadCol.cpp  (+26 more)
load-emulator-controls/: load-emulator-controls.ino
load-emulator-controls-sketch/: load-emulator-controls-sketch.ino
prev-used-sketches/_4x3_keypad_8-relay/: _4x3_keypad_8-relay.ino
prev-used-sketches/_4x4_keypad/: _4x4_keypad.ino
prev-used-sketches/_4x4_keypad_control_with_Mux_shield/: _4x4_keypad_control_with_Mux_shield.ino
prev-used-sketches/_4x4_keypad_custom/: _4x4_keypad_custom.ino
relay_control_with_Shift_Registers/: relay_control_with_Shift_Registers.ino
testing-ground-sketches/test_Input_handler_lib/: test_Input_handler_lib.ino
testing-ground-sketches/test_KeypadInput4x4/: test_KeypadInput4x4.ino
testing-ground-sketches/test_Keypad_lib/: test_Keypad_lib.ino
testing-ground-sketches/test_LCD/: test_LCD.ino
testing-ground-sketches/test_LCD_lib/: test_LCD_lib.ino
testing-ground-sketches/test_Parser_lib/: test_Parser_lib.ino
testing-ground-sketches/test_SR_lib/: test_SR_lib.ino
testing-ground-sketches/test_serial_in/: test_serial_in.ino
testing-ground-sketches/test_single_function/: test_single_function.ino
tests/: Arduino_mock.h  CMakeLists.txt  Collect.cpp  CollectKeypadSequence.cpp  CollectPCSequence.cpp  Collect_tests.cpp  CollectdSPACESequence.cpp  Encode_tests.cpp  InputSequence.cpp  InputSequence_tests.cpp  InputSequence_utils.h  Keypad_mock.h  LoadProfile.cpp  LoadProfile_tests.cpp  Parse_tests.cpp  RelayStateGenerator.cpp  RelayStateGenerator_tests.cpp  Scan_tests.cpp  StringDouble.h  Timer_mock.h
tests/Hardware_tests/Arduino_interface_tests/: Arduino_interface_tests.ino  copy_files.sh
tests/Hardware_tests/Arduino_interface_tests/src/: HardwareArduino.cpp
tests/Hardware_tests/Display_interface_tests/: Display_interface_tests.ino  copy_files.sh
tests/Hardware_tests/Display_interface_tests/src/: HardwareDisplay.cpp
tests/Hardware_tests/Keypad_interface_tests/: Keypad_interface_tests.ino  copy_files.sh
tests/Hardware_tests/Keypad_interface_tests/include/: Keypad.h
tests/Hardware_tests/Keypad_interface_tests/src/: HardwareKeypad.cpp
tests/Hardware_tests/SD_and_LoadProfile_interface_tests/: SD_and_LoadProfile_interface_tests.ino  copy_files.sh
tests/Hardware_tests/SD_and_LoadProfile_interface_tests/src/: SDCard.cpp
tests/Hardware_tests/Serial_input_source_tests/: Serial_input_source_tests.ino  copy_files.sh
tests/Hardware_tests/Serial_input_source_tests/include/: ArduinoInterface.h  HardwareXBee.h  Monitor.h
tests/Hardware_tests/ShiftRegister_interface_tests/: ShiftRegister_interface_tests.ino  copy_files.sh
tests/Hardware_tests/ShiftRegister_interface_tests/src/: ShiftRegister.cpp
tests/Hardware_tests/XBee_interface_tests/: XBee_interface_tests.ino  copy_files.sh
tests/Hardware_tests/XBee_interface_tests/include/: XBee.h
tests/mocks/: Keypad.h  LCD.h  XBee.h
tests/utils/: CMakeLists.txt  InputSequence.cpp  globals.cpp
utils/: dSPACE TX samples.txt  sample input strings.txt
utils/SD_card_test_text_files/: endLF.txt
utils/i2c_scanner/: i2c_scanner.ino
utils/load-profiles/: PRFL001.txt  PRFL002.txt  PRFL003.txt
(+23 files in other folders)
